Listen to didReceiveResponse() to get the response in WebViewPlugin.

This is a partial revert of the WebViewPlugin changes in
https://crrev.com/1f6905f9f1667c171816b68b595a1edc4615bd59 [formerly 8489f1bf78c2c6f296e0df6c529751d29e8a0188]

BUG=641028

Review-Url: https://codereview.chromium.org/2349443003
Cr-Commit-Position: refs/heads/master@{#419387}

Former-commit-id: 8ed4bf69eca5e2696aeab731a8e9a15e8f379f2b